# mfo-fe-operator

./: Application.hs  Foundation.hs  devel.hs  fe-operator.cabal  start.sh
Handler/: Auth.hs  Home.hs  News.hs
Widgets/: DefaultHeader.hs  MainMenu.hs  News.hs
config/: keter.yml  routes  settings.yml
deploy/: Procfile
templates/: default-header.hamlet
templates/mainmenu/: mainmenu.hamlet
templates/news/: news.hamlet  news.julius
templates/utils/: jspost.julius
